--- a/assests/stylesheet/style.css
+++ b/assests/stylesheet/style.css
@@ -70,7 +70,7 @@ header{
 .home-align-center{
     text-align: center; 
 }
-h1{
+.The-Box-Model  {
     font-size: 40px;
     margin: 50px 0px 10px 0px;
 }
@@ -149,18 +149,21 @@ main{
     line-height: 1.5;
 }
 .image1{
-    width: 50%;
-    height: 400px;
-    float: left;
+    width: 650px;
+    height: 400px; 
     padding: 40px 20px 20px 90px;
     box-sizing: border-box;
+    display: inline-block;
+}
+img{
+    width: 100%;
 }
 .article1{
-    width: 50%;
+    width: 650px;
     height: 400px;
-    float: right;
-    padding: 40px 90px 20px 20px;
+    padding: 40px 90px 20px 20px; 
     box-sizing: border-box;
+    display: inline-block;
 }
 .blog-heading{
     font-size: 35px;
@@ -178,11 +181,12 @@ main{
     border-radius: 20px;
 }
 .article2{
-    width: 50%;
+    width: 650px;
     padding: 70px 20px 20px 90px;
     box-sizing: border-box;
     display: inline-block; 
-    float: left;  
+    vertical-align: top;
+    
 }
 .learn{
     color: green;
@@ -195,6 +199,13 @@ main{
     margin-top: 15px;
 }
 .article3{
-    float: right;
+    width: 650px;
     padding: 70px 90px 20px 20px;
+    box-sizing: border-box;
+    display: inline-block; 
+}
+.article-image{
+    width: 100%;
+    height: 350px;
+
 }
